--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
 		"tailwindcss": "^3.4.18",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.2"
+	},
+	"dependencies": {
+		"apexcharts": "^5.3.6"
 	}
 }
